fix(security): correct permitAll mapping for docs download endpoint
- Ajusta SecurityConfig para liberar /docs/download-md (antes estava /docs/download.md)
- Garante acesso público ao endpoint de download de documentação